2005-09-27  Don Allingham  <don@gramps-project.org>
	* src/ReadXML.py: store then restore read only flag on load

2005-09-26  Alex Roitman  <shura@gramps-project.org>
	* all reports: switch categories from const to Report module.
	* src/const.py.in: Remove report and tool categories.
	* src/Plugins.py: Switch report and tool category constants.
	* src/PluginMgr.py: Switch report and tool category constants.
	* src/Report.py, src/Tool.py: Move constants.
	* src/plugins/ChangeNames.py, src/plugins/ChangeTypes.py,
	src/plugins/Checkpoint.py: switch category constants.	

2005-09-26  Don Allingham  <don@gramps-project.org>
	* src/docgen/PSDrawDoc.py: locale independent floating point 
	* src/DateDisplay.py: Better french republican date handling
	* src/DateParser.py: Better french republican date handling
	
2005-09-26  Alex Roitman  <shura@gramps-project.org>
	* src/plugins/ChangeNames.py: Convert to the new scheme.
	* src/plugins/Checkpoint.py: Convert to new scheme, improve.
	* src/plugins/checkpoint.glade: Add to CVS.
	* src/plugins/Makefile.am: Ship new glade file.

2005-09-25  Stefan Bjork  <skalman@acc.umu.se>
	* src/po/sv.po: up to date with 2.0.9
	* src/date/Date_sv.py: date parser/displayer for swedish locale
	* src/date/Makefile.am: include Date_sv.py

2005-09-24  Don Allingham  <don@gramps-project.org>
	* src/data/tips.xml: removed the tip mentioning column sorting
	in people view.
	* src/latin_utf8.py: removed
	* src/ReadGedcom.py: added latin_utf8 functions
	* src/Spell.py: better error checking on import

2005-09-23  Don Allingham  <don@gramps-project.org>
	* doc/gramps-manual/C/faq.xml: more updates
	* doc/gramps-manual/C/getstart.xml: more updates
	* doc/gramps-manual/C/gramps-manual.xml: more updates
	* doc/gramps-manual/C/mainwin.xml: more updates
	* doc/gramps-manual/C/usage.xml: more updates

2005-09-24  Don Allingham  <dona@gramps-project.org>
	* src/WriteGedcom.py: handle patronymics

2005-09-24  Martin Hawlisch  <Martin.Hawlisch@gmx.de>