@@ -1,3 +1,6 @@
+2005-09-28  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/plugins/TestcaseGenerator.py: Use new tool/option api 
+
 2005-09-27  Don Allingham  <don@gramps-project.org>
 	* src/ReadXML.py: store then restore read only flag on load
 
